# visualization

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  rosdep.yaml  stack.xml  test.txt
rviz/: CMakeLists.txt  manifest.xml
rviz/lib/: default_plugin.yaml
rviz/ogre_media/materials/programs/: point_cloud_billboard.program  point_cloud_billboard_fp.cg  point_cloud_billboard_vp.cg  point_cloud_box_vp.cg  point_cloud_point.program
rviz/ogre_media/materials/scripts/: point_cloud_box.material  point_cloud_point.material
rviz/src/: CMakeLists.txt
rviz/src/default_plugin/: init.cpp
rviz/src/rviz/: CMakeLists.txt  config.cpp  config.h  display_wrapper.cpp  loading_dialog.cpp  rviz_app.cpp  uuid.cpp  uuid.h  visualization_frame.cpp  visualization_frame.h  visualization_manager.cpp  visualization_manager.h
rviz/src/rviz/default_plugin/: point_cloud_transformers.cpp
rviz/src/rviz/image/: ros_image_texture.cpp
rviz/src/rviz/math/: quaternion.cpp  quaternion.h  vector3.cpp  vector3.h
rviz/src/rviz/plugin/: plugin.cpp  plugin.h
rviz/src/rviz/render/: convert.cpp  convert.h  irender_loop_listener.h  irender_window.h  irenderer.h  iscene.h  ogre_renderer.cpp  ogre_renderer.h
rviz/src/rviz/render/ogre/: camera.cpp  camera.h  convert.cpp  convert.h  ogre_renderer.cpp  ogre_renderer.h  render_window.cpp  render_window.h  scene.cpp  scene.h
rviz/src/rviz/render_client_proxy_interface/: icamera_proxy.h  iproxy.h
rviz/src/rviz/render_interface/: icamera.h  irender_window.h  irenderer.h  iscene.h
rviz/src/rviz/render_ogre/: camera.cpp  camera.h  convert.h  render_window.cpp  render_window.h  renderer.cpp  renderer.h  scene.cpp  scene.h
rviz/src/rviz/ros/: forwards.h
rviz/src/rviz/ros/client/: camera.cpp  camera.h  camera_proxy.cpp  camera_proxy.h  init.cpp  init.h  object.h  render_window.cpp  render_window.h  render_window_client.cpp  render_window_client.h  scene.cpp  scene.h
rviz/src/rviz/ros/server/: renderer_ros.cpp  renderer_ros.h
rviz_interface_gen/: CMakeLists.txt  mainpage.dox  manifest.xml  test.interface  test.txt
rviz_interface_gen/antlr/: InterfaceLexer.g  InterfaceParser.g  generate.sh
rviz_interface_gen/cmake/: interfacebuild.cmake
rviz_interface_gen/include/rviz_interface_gen/: interface.h
rviz_interface_gen/interfaces/: test.interface
rviz_interface_gen/scripts/: gen_cpp.py  gen_msgs.py  get_cpp_outputs.py  get_messages.py  get_messages_for_interface.py
rviz_interface_gen/src/rviz_interface_gen/: InterfaceLexer.py  InterfaceLexer.tokens  InterfaceParser.py  InterfaceParser.tokens  msgs.py
rviz_interface_gen/src/rviz_interface_gen/antlr3/: __init__.py  dfa.py  dottreegen.py  exceptions.py  extras.py  recognizers.py  streams.py  tokens.py  tree.py  treewizard.py
rviz_interface_gen/test/: test_interface.cpp  test_interface.test
rviz_interfaces/: CMakeLists.txt  manifest.xml
rviz_interfaces/interfaces/: camera.interface  material.interface  mesh_instance.interface  render_window.interface  scene.interface  simple_color_material.interface  simple_shape.interface  transform_node.interface
rviz_math/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_math/src/: quaternion.cpp  vector3.cpp
rviz_mesh_loader/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_mesh_loader/src/: assimp_parser.cpp  loader.cpp  stl_parser.cpp
rviz_msgs/: manifest.xml
rviz_msgs/msg/: CameraCommand.msg  CameraMoveCommand.msg  ColorRGB.msg  Material.msg  Mesh.msg  Points.msg  SubMesh.msg  (+5 more)
rviz_renderer_client/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_renderer_interface/: mainpage.dox  manifest.xml
rviz_renderer_ogre/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_renderer_ogre/include/rviz_renderer_ogre/: camera.h  convert.h  disable_rendering_scheme_listener.h  init.h  material.h  mesh.h  mesh_instance.h  mesh_loader.h  ogre_material_generator.h  points_manager.h  points_material_generator.h  points_renderer.h  points_renderer_desc.h  render_window.h  renderable.h  renderer.h  scene.h  server.h  simple_color_material.h  simple_shape.h  submesh.h  transform_node.h
rviz_renderer_ogre/media/compositors/: deferred_shading.compositor
rviz_renderer_ogre/media/materials/programs/: deferred_gooch_98.cg  deferred_gooch_98.program  deferred_outline.cg  deferred_outline.program  deferred_stipple_alpha_blend.cg  deferred_stipple_alpha_blend.program  deferred_vp.cg  deferred_vp.program  gaussian.cg  gaussian.program  gooch_98.cg  passthrough.program  point_cloud_box.program  point_cloud_box_fp.cg  simple_color.cg  simple_color.program  simple_texture.cg  simple_texture.program  sobel.cg  weighted_average_alpha_blend.cg  weighted_average_alpha_blend.program
rviz_renderer_ogre/media/materials/scripts/: deferred_gooch_98.material  deferred_outline.material  deferred_stipple_alpha_blend.material  gaussian.material  point_cloud_billboard.material  simple_color.material  simple_texture.material  weighted_average_alpha_blend.material
rviz_renderer_ogre/media/models/: cone.dae  cylinder.dae  sphere.dae
rviz_renderer_ogre/media/shaderlib/: normal_mapping.cg  quaternion.cg
rviz_renderer_ogre/media/shaderlib/points/: point_cloud_billboard_fp.cg  point_cloud_billboard_gp.cg  point_cloud_billboard_vp.cg  point_cloud_box_fp.cg  point_cloud_box_gp.cg  point_cloud_box_vp.cg
rviz_renderer_ogre/media/textures/: 3d_stipple.bytes
rviz_renderer_ogre/scratch/: create_3d_stipple.cpp  generate_gaussian_1d.cpp
rviz_renderer_ogre/src/: camera.cpp  convert.cpp  disable_rendering_scheme_listener.cpp  init.cpp  material.cpp  mesh.cpp  mesh_instance.cpp  mesh_loader.cpp  ogre_material_generator.cpp  points_manager.cpp  points_material_generator.cpp  points_renderer.cpp  render_window.cpp  renderer.cpp  scene.cpp  server.cpp  simple_color_material.cpp  simple_shape.cpp  submesh.cpp  transform_node.cpp
rviz_renderer_ogre/test/: test_depth_peeling.cpp
rviz_renderer_server/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_rpc/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_uuid/: CMakeLists.txt  mainpage.dox  manifest.xml
wxpropgrid/: Makefile  find_lib
(+63 files in other folders)
